k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdfc-ingress
  namespace: hdfc
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /insurance
            pathType: Prefix
            backend:
              service:
                name: insurance-service
                port:
                  number: 80

          - path: /internetbanking
            pathType: Prefix
            backend:
              service:
                name: internetbanking-service
                port:
                  number: 80



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdfc-ingress
  namespace: hdfc
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /insurance
            pathType: Prefix
            backend:
              service:
                name: insurance-service
                port:
                  number: 80

          - path: /internetbanking
            pathType: Prefix
            backend:
              service:
                name: internetbanking-service
                port:
                  number: 80
